--- a/styles.css
+++ b/styles.css
@@ -17,31 +17,31 @@ footer {
 }
 
 .w {
-  background-image: url("../../WebDevelopment/DrumKitStartingFiles/images/tom1.png")
+  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/tom1.png?raw=true");
 }
 
 .a {
-  background-image: url("../../WebDevelopment/DrumKitStartingFiles/images/tom2.png")
+  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/tom2.png?raw=true");
 }
 
 .s {
-  background-image: url("../../WebDevelopment/DrumKitStartingFiles/images/tom3.png")
+  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/tom3.png?raw=true");
 }
 
 .d {
-  background-image: url("../../WebDevelopment/DrumKitStartingFiles/images/tom4.png")
+  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/tom4.png?raw=true"");
 }
 
 .j {
-  background-image: url("../../WebDevelopment/DrumKitStartingFiles/images/snare.png")
+  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/snare.png?raw=true");
 }
 
 .k {
-  background-image: url("../../WebDevelopment/DrumKitStartingFiles/images/crash.png")
+  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/crash.png?raw=true");
 }
 
 .l {
-  background-image: url("../../WebDevelopment/DrumKitStartingFiles/images/kick.png")
+  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/kick.png?raw=true");
 }
 
 .set {
