--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ footer {
 }
 
 .d {
-  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/tom4.png?raw=true"");
+  background-image: url("https://github.com/JaypeeB-Ph/VirtualDrumKit/blob/main/tom4.png?raw=true");
 }
 
 .j {
